# PandoraTargetList

./: .gitignore  CHANGES.md  README.md  Untitled.ipynb  mkdocs.yml  pandora_targets.csv  pyproject.toml
.github/workflows/: deploy-mkdocs.yml  test.yml
docs/: apidocs.md  nirda_readout_schemes.json  targets_covering_the_sky_5x5-v02.csv  tutorial.ipynb  vda_readout_schemes.json
scripts/: make_target_file.py  update_all_TDFs.py
src/pandoratargetlist/: __init__.py  json_targets.py  prioritize.py  targets.py  utils.py
target_definition_files/: README.md  all_priorities.csv  nirda_readout_schemes.json  occultation_targets_table.json  priorities.csv  vda_readout_schemes.json
target_definition_files/auxiliary-exoplanet/: 55_Cnce_target_definition.json  GJ_357b_target_definition.json  GJ_486b_target_definition.json  GJ_806b_target_definition.json  GJ_9827c_target_definition.json  HAT-P-11b_target_definition.json  HAT-P-19b_target_definition.json  HAT-P-26b_target_definition.json  HATS-72b_target_definition.json  HD_20329b_target_definition.json  HD_213885b_target_definition.json  HD_93963_Ab_target_definition.json  HIP_113103b_target_definition.json  K2-141c_target_definition.json  K2-198c_target_definition.json  K2-198d_target_definition.json  K2-33b_target_definition.json  K2-3b_target_definition.json  KELT-11b_target_definition.json  LHS_1140c_target_definition.json  LHS_3844b_target_definition.json  L_98-59c_target_definition.json  L_98-59d_target_definition.json  TOI-1027b_target_definition.json  (+38 more)
tests/: test_file_validation.py  validate_files.py
(+18402 files in other folders)
