[tool.poetry]
name = "pandoratargetlist"
version = "0.1.0"
description = "Maintaining information about Pandora targets"
authors = ["benhord <benjhord@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandorasim = ">=1.0.10"
pandorasat = ">=0.5.23"
pandorapsf = ">0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
